Initial version of ChimeraX Toolshed

--- a/apps/templates/app_page.html
+++ b/apps/templates/app_page.html
@@ -51,7 +51,7 @@
 			</a>
 			<ul class="dropdown-menu pull-right">
 				<li><a href="{% url 'app_page_edit' app.name %}">Edit this page</a></li>
-				<li><a href="{% url 'submit-app' %}?expect_app_name={{ app.fullname }}">Submit a 3.0 app release</a></li>
+				<li><a href="{% url 'submit-app' %}?expect_app_name={{ app.fullname }}">Submit a bundle release</a></li>
 				<li class="divider"></li>
 				<li><a data-toggle="modal" href="#delete_ratings_modal">Delete all ratings</a></li>
 			</ul>
@@ -66,7 +66,7 @@
 <div class="row">
 	<div class="span12" id="app-usage-info">
 		{# Ratings #}
-		<div class="rating-stars" data-placement="bottom" data-title="Rate this app! <a class='close' style='margin-left: 0.5em;'>&times;</a>" data-html="true">
+		<div class="rating-stars" data-placement="bottom" data-title="Rate this bundle! <a class='close' style='margin-left: 0.5em;'>&times;</a>" data-html="true">
 			<i class="rating-stars-empty icon-cy-stars-empty"></i>
 			<i class="rating-stars-filled icon-cy-stars-filled" style="width: {{ app.stars_percentage|escapejs }}%;"></i>
 			<span class="rating-spacer"></span>
@@ -87,14 +87,18 @@
 
 		{# badges #}
 		{% if app.has_releases %}
+		<!--
 		<img src="{% get_static_prefix %}apps/img/cy3_sticker.png" class="has-tooltip" data-toggle="tooltip" data-title="This app is available for Cytoscape 3.0 and above.">
+		-->
 		{% endif %}
 
+		<!--
 		{% if app.competition_winner_dec_2012 %}
 		<a href="http://nrnb.org/competitions.html" target="_blank">
 			<img src="{% get_static_prefix %}apps/img/trophy.png" class="has-tooltip" data-toggle="tooltip" data-title="This app won the December 2012 App Competition.">
 		</a>
 		{% endif %}
+		-->
 
 		{% if app.coderepo %}
 		<a href="{{ app.coderepo }}" target="_blank">
@@ -203,7 +207,7 @@
 
 						{# Works with #}
 						<p>
-							<strong>Works with</strong> Cytoscape
+							<strong>Works with</strong> ChimeraX
 							{{ release.works_with }}
 						</p>
 						{# End Works with #}
@@ -224,7 +228,7 @@
 						{# Release dependencies #}
 						{% if release.dependents.count %}
 						<p>
-							<strong>Apps that depend on this release</strong>
+							<strong>Bundles that depend on this release</strong>
 							<ul>
 								{% for dependent in release.dependents.all %}
 								<li><a href="{% url 'app_page' dependent.app.name %}" target="_blank">{{ dependent.app.fullname }}</a> {{ dependent.version }}</li>
@@ -256,7 +260,7 @@
 		{# 3.0 download panel #}
 		{% if app.has_releases %}
 		<div class="well">
-			<h6 class="panel-title muted">CYTOSCAPE 3</h6>
+			<h6 class="panel-title muted">CHIMERAX</h6>
 			<button class="btn btn-large btn-block" id="cy-app-install-btn">
 				<i></i> {# <-- download button icon will go here #}
 				<h4></h4> {# <-- download button text will go here #}
@@ -264,16 +268,17 @@
 			<p><strong>Version</strong> {{ cy3_latest_release.version }}</p>
 			{% if app.license_text %}<p><strong>License</strong> <a href="{{ app.license_text }}" target="_blank">Click here</a></p>{% endif %}
 			<p><strong>Released</strong> {{ cy3_latest_release.created|date:'j M Y' }}</p>
-			<p><strong>Works with</strong> <a href="http://www.cytoscape.org" target="_blank">Cytoscape {{ cy3_latest_release.works_with }}</a></p>
+			<p><strong>Works with</strong> <a href="http://www.rbvi.ucsf.edu/chimerax" target="_blank">ChimeraX {{ cy3_latest_release.works_with }}</a></p>
 			<p><strong>Download Stats</strong> <a href="{% url 'app_stats' app.name %}" target="_blank">Click here</a>
 		</div>
 		{% endif %}
 		{# end 3.0 download panel #}
 			
+		<!--
 		{# 2.x download panel #}
 		{% if app.cy_2x_plugin_download %}
 		<div class="well">
-			<h6 class="panel-title muted">CYTOSCAPE 2</h6>
+			<h6 class="panel-title muted">CHIMERAX</h6>
 			{% if app.has_releases %}
 			<p><strong>Version</strong> <a class="cy-app-2x-download-popover" href="{{ app.cy_2x_plugin_download }}">{{ app.cy_2x_plugin_version }}</a></p>
 			{% else %}
@@ -285,11 +290,12 @@
 			{% if app.license_text %}<p><strong>License</strong> <a href="{{ app.license_text }}" target="_blank">Click here</a></p>{% endif %}
 			{% endif %}
 			{% if app.cy_2x_plugin_release_date %}<p><strong>Released</strong> {{ app.cy_2x_plugin_release_date|date:'j M Y' }}</p>{% endif %}
-			{% if app.cy_2x_versions %}<p><strong>Works with</strong> <a href="http://www.cytoscape.org" target="_blank">Cytoscape {{ app.cy_2x_versions }}</a></p>{% endif %}
+			{% if app.cy_2x_versions %}<p><strong>Works with</strong> <a href="http://www.rbvi.ucsf.edu/chimerax" target="_blank">ChimeraX {{ app.cy_2x_versions }}</a></p>{% endif %}
 			<p><strong>Download Stats</strong> <a href="http://chianti.ucsd.edu/cyto_web/plugins/plugindownloadstatistics.php">Click here</a></p>
 		</div>
 		{% endif %}
 		{# end 2.x download panel #}
+		-->
 				
 		{# in case there are no downloads... #}
 		{% if not app.has_releases and not app.cy_2x_plugin_download %}
@@ -305,15 +311,20 @@
 				<li class="nav-header">
 					Resources
 				</li>
-				<li><a href="https://groups.google.com/forum/?fromgroups#!newtopic/cytoscape-helpdesk" target="_blank">
+				<li><a href="mailto:chimerax-users@cgl.ucsf.edu">
 					<i class="icon-question-sign"></i>
 					Ask a question
 				</a></li>
 
-				<li><a href="https://groups.google.com/forum/?fromgroups#!searchin/cytoscape-helpdesk/{{ app.fullname }}" target="_blank">
+				<li>
+				[Searching help desk answers not available yet]
+				<!--
+				<a href="https://groups.google.com/forum/?fromgroups#!searchin/cytoscape-helpdesk/{{ app.fullname }}" target="_blank">
 					<i class="icon-comment"></i>
 					Search posts
-				</a></li>
+				</a>
+				-->
+				</li>
 
 				<li class="divider"></li>
 
@@ -361,7 +372,7 @@
 		<h3>Delete All Ratings</h3>
 	</div>
 	<div class="modal-body">
-		Are you sure you want to delete all of your app's ratings?
+		Are you sure you want to delete all of your bundle's ratings?
 	</div>
 	<div class="modal-footer">
 		<form target="" method="post" style="margin: 0;">
