--- a/apps/templates/app_page_edit.html
+++ b/apps/templates/app_page_edit.html
@@ -25,11 +25,11 @@
   </div>
   <div class="span7">
     <h2 id="app-title">
-      <span rel="tooltip" title="Your app name cannot be changed">
+      <span rel="tooltip" title="Your bundle name cannot be changed">
         {{ app.fullname }}
       </span>
     </h2>
-    <input class="span7" id="cy-app-description" type="text" placeholder="Enter a short description of your app here" value="{% if app.description %}{{ app.description|escape }}{% endif %}" maxlength="{{ app_description_maxlength }}">
+    <input class="span7" id="cy-app-description" type="text" placeholder="Enter a short description of your bundle here" value="{% if app.description %}{{ app.description|escape }}{% endif %}" maxlength="{{ app_description_maxlength }}">
   </div>
 </div>
 {# end app header #}
@@ -143,7 +143,7 @@
                 <button class="btn btn-small {% if release.dependents.count %}disabled{% endif %} cy-release-delete"><i class="icon icon-trash"></i> Delete</button>
               </h4>
               <p>
-                <strong>Works with Cytoscape</strong>
+                <strong>Works with ChimeraX</strong>
                 {{ release.works_with }}
               </p>
               {% if release.releaseapi_set.count %}
@@ -159,7 +159,7 @@
               {% endif %}
               {% if release.dependents.count %}
               <p>
-                <strong>Apps that depend on this release</strong>
+                <strong>Bundles that depend on this release</strong>
                 <ul>
                   {% for dependent in release.dependents.all %}
                   <li>
@@ -205,6 +205,7 @@
     </div>
     {# end editors #}
         
+    <!--
     {# 2.x #}
     <div class="well cy-right-panel">
       <h6 class="muted panel-title">Cytoscape 2.x Plugin</h6>
@@ -230,6 +231,7 @@
       </fieldset>
     </div>
     {# end 2.x #}
+    -->
 
     {# resources #}
     <div class="well cy-right-panel">
@@ -284,7 +286,7 @@
     <h3>Cancel Editing</h3>
   </div>
   <div class="modal-body">
-    Are you sure you want to cancel editing this app page? All unsaved changes will be lost.
+    Are you sure you want to cancel editing this bundle page? All unsaved changes will be lost.
   </div>
   <div class="modal-footer">
     <a href="{% url 'app_page' app.name %}" class="btn btn-danger">Yes, Discard Changes</a>
@@ -296,7 +298,7 @@
 {# save dialog #}
 <div class="modal hide fade in" id="save-modal">
   <div class="modal-header">
-    <h3>Saving App Page...</h3>
+    <h3>Saving Bundle Page...</h3>
   </div>
   <div class="modal-body">
   </div>
