--- a/apps/templates/apps_with_author.html
+++ b/apps/templates/apps_with_author.html
@@ -29,7 +29,7 @@
     </div>
     <div class="row">
         <div class="span8">
-            <h2 style="margin-bottom: 1em;">Apps</h2>
+            <h2 style="margin-bottom: 1em;">Bundles</h2>
         </div>
     </div>
     <div class="row">
