--- a/apps/templates/apps_with_tag.html
+++ b/apps/templates/apps_with_tag.html
@@ -10,13 +10,16 @@
     <div class="span12">
       <h1>{{ tag.fullname|capfirst }}</h1>
       <p>
+      [Searching help desk answers not available yet]
+      <!--
       <a href='https://groups.google.com/forum/?fromgroups#!searchin/cytoscape-helpdesk/"{{ tag.fullname }}"' target="_blank">
         <i class="icon-comment"></i>
         Search for posts about {{ tag.fullname }} &rarr;
       </a>
+      -->
       </p>
       <p>
-      <a href="https://groups.google.com/forum/?fromgroups#!newtopic/cytoscape-helpdesk" target="_blank">
+      <a href="mailto:chimerax-users@cgl.ucsf.edu">
         <i class="icon-question-sign"></i>
         Ask a question about {{ tag.fullname }} &rarr;
       </a>
