--- a/apps/templates/wall_of_apps.html
+++ b/apps/templates/wall_of_apps.html
@@ -25,12 +25,12 @@
 {% endblock %}
 
 {% block title %}
- - Wall of Apps
+ - Wall of Bundles
 {% endblock %}
 
 {% block content %}
 	<h1>
-		Wall of Apps
+		Wall of Bundles
 		<small>{{ total_apps_count }} total</small>
 	</h1>
 	<table class="table">
