--- a/download/templates/all_stats.html
+++ b/download/templates/all_stats.html
@@ -7,7 +7,7 @@
   <script type="text/javascript" src="{% get_static_prefix %}download/js/app_stats.js"></script>
 {% endblock %}
 
-{% block title %} - Download Statistics Across All Apps{% endblock %}
+{% block title %} - Download Statistics Across All Bundles{% endblock %}
 
 {% block content %}
 <div class="row">
@@ -15,7 +15,7 @@
     <div class="page-header">
       <h1>
         Download Statistics
-        <small>Across All Apps</small>
+        <small>Across All Bundles</small>
       </h1>
     </div>
   </div>
