--- a/help/templates/about.html
+++ b/help/templates/about.html
@@ -21,6 +21,13 @@
 
 	<div class="row">
 		<div class="span12">
+		<p>Coming soon...</p>
+		</div>
+	</div>
+
+	<!--
+	<div class="row">
+		<div class="span12">
 			<h2>Cite us!</h2>
 			Was the Cytoscape App Store helpful in your work?
 			<a href="http://www.ncbi.nlm.nih.gov/pubmed/23595664" target="_blank" style="font-weight: bold;">
@@ -211,5 +218,6 @@
                         P41 GM103504. Visit <a href="http://nrnb.org">nrnb.org</a> for more information.
                 </div>
         </div>
+	-->
 
 {% endblock %}
