--- a/help/templates/contact.html
+++ b/help/templates/contact.html
@@ -15,15 +15,15 @@
 <div class="row" style="margin-bottom: 3em;">
 	<div class="span6 offset1">
     <p>
-    <strong>Do you have a question about an app or Cytoscape?
+    <strong>Do you have a question about an bundle or ChimeraX?
     <br>
-    You can post your question on the
-    <a target="_blank" href="https://groups.google.com/forum/?fromgroups#!forum/cytoscape-helpdesk">Cytoscape Help Desk</a>.
+    You can send your question to the
+    <a href="mailto:chimerax-users@cgl.ucsf.edu">ChimeraX Help Desk</a>.
     </strong>
     </p>
 
     <p style="margin-top: 5em;">
-    However, if you have a question about or feedback for the App Store,
+    However, if you have a question about or feedback for the Toolshed,
     let us know<a href="#" onclick="$('form').fadeIn('slow');$(this).fadeOut();"> by clicking here</a>.
     </p>
 	</div>
