--- a/submit_app/templates/pending_apps.html
+++ b/submit_app/templates/pending_apps.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% block title %}- Pending Apps{% endblock %}
+{% block title %}- Pending Bundles{% endblock %}
 
 {% block more_head %}
     <script type="text/javascript" src="{% get_static_prefix %}common/js/setup_ajax_for_csrf.js"></script>
@@ -11,7 +11,7 @@
     <div class="row">
         <div class="span8">
             <div class="page-header">
-                <h1>Pending Apps</h1>
+                <h1>Pending Bundles</h1>
             </div>
         </div>
     </div>
