--- a/submit_app/templates/submit_done.html
+++ b/submit_app/templates/submit_done.html
@@ -14,7 +14,7 @@
                     </small>
                 </h1>
             </div>
-            Your app has been submitted! You'll be notified by email when your app has been approved.
+            Your bundle has been submitted! You'll be notified by email when your bundle has been approved.
         </div>
     </div>
 {% endblock %}
