--- a/help/templates/md.html
+++ b/help/templates/md.html
@@ -10,7 +10,7 @@
   
   <link rel="stylesheet" type="text/css" media="all" href="{% get_static_prefix %}common/lib/bootstrap/css/bootstrap.min.css"/>
 
-  <title>Cytoscape App Store - Markdown Guide</title>
+  <title>ChimeraX Toolshed - Markdown Guide</title>
 </head>
 
 <body>
@@ -100,46 +100,46 @@ new paragraphs.
 
 		<div class="row">
 			<div class="span6">
-				<pre>This is an URL link: http://cytoscape.org</pre>
+				<pre>This is an URL link: http://www.rbvi.ucsf.edu/chimerax</pre>
 			</div>
 			<div class="span6">
-				This is a URL link: <a href="http://cytoscape.org">http://cytoscape.org</a>
-			</div>
-		</div>
-
-		<div class="row">
-			<div class="span6">
-				<pre>This is another URL link: &lt;http://cytoscape.org&gt;</pre>
-			</div>
-			<div class="span6">
-				This is another URL link: <a href="http://cytoscape.org">http://cytoscape.org</a>
+				This is a URL link: <a href="http://www.rbvi.ucsf.edu/chimerax">http://www.rbvi.ucsf.edu/chimerax</a>
 			</div>
 		</div>
 
 		<div class="row">
 			<div class="span6">
-				<pre>This is yet another URL link: [http://cytoscape.org]</pre>
+				<pre>This is another URL link: &lt;http://www.rbvi.ucsf.edu/chimerax&gt;</pre>
 			</div>
 			<div class="span6">
-				This is yet another URL link: <a href="http://cytoscape.org">http://cytoscape.org</a>
-			</div>
-		</div>
-
-		<div class="row">
-			<div class="span6">
-				<pre>A named link: [http://cytoscape.org Cytoscape]</pre>
-			</div>
-			<div class="span6">
-				A named link: <a href="http://cytoscape.org">Cytoscape</a>
+				This is another URL link: <a href="http://www.rbvi.ucsf.edu/chimerax">http://www.rbvi.ucsf.edu/chimerax</a>
 			</div>
 		</div>
 
 		<div class="row">
 			<div class="span6">
-				<pre>Also a named link: [Cytoscape](http://cytoscape.org)</pre>
+				<pre>This is yet another URL link: [http://www.rbvi.ucsf.edu/chimerax]</pre>
 			</div>
 			<div class="span6">
-				Also a named link: <a href="http://cytoscape.org">Cytoscape</a>
+				This is yet another URL link: <a href="http://www.rbvi.ucsf.edu/chimerax">http://www.rbvi.ucsf.edu/chimerax</a>
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="span6">
+				<pre>A named link: [http://www.rbvi.ucsf.edu/chimerax ChimeraX]</pre>
+			</div>
+			<div class="span6">
+				A named link: <a href="http://www.rbvi.ucsf.edu/chimerax">ChimeraX</a>
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="span6">
+				<pre>Also a named link: [ChimeraX](http://www.rbvi.ucsf.edu/chimerax)</pre>
+			</div>
+			<div class="span6">
+				Also a named link: <a href="http://www.rbvi.ucsf.edu/chimerax">ChimeraX</a>
 			</div>
 		</div>
 
