--- a/templates/500.html
+++ b/templates/500.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cytoscape App Store - 500 Server Error</title>
+    <title>ChimeraX Toolshed - 500 Server Error</title>
     <style type="text/css">
       body {
         background-color: #353535;
@@ -27,7 +27,7 @@
   <body>
     <div id="content">
       <h1>500 Server Error</h1>
-      <img src="http://apps.cytoscape.org/static/common/img/technical-difficulties.jpg">
+      <img src="/static/common/img/technical-difficulties.jpg">
       <p>Sorry! We're having technical difficulties. The web site administrators have been informed.</p>
     </div>
   </body>
