--- a/users/templates/login.html
+++ b/users/templates/login.html
@@ -20,7 +20,7 @@
     <div class="row">
         <div class="span5">
             <span class="label label-warning"><i class="icon-info-sign icon-white"></i> Notice</span>
-            The Cytoscape App Store will not give or sell your personal information
+            The ChiemraX Toolshed will not give or sell your personal information
             to others.
         </div>
     </div>
