--- a/apps/templates/wall_of_apps.html
+++ b/apps/templates/wall_of_apps.html
@@ -40,7 +40,7 @@
 				<td>
 					{% for app in apps %}
 						<a href="{% url 'app_page' app.name %}">
-							<i class="cy-app-icon" rel="tooltip" title="{{ app.fullname }}" style="background-image: url({{ app.icon_url }});"></i>
+							<i class="cy-app-icon" rel="tooltip" title="{{ app.display_name }}" style="background-image: url({{ app.icon_url }});"></i>
 						</a>
 					{% endfor %}
 				</td>
