--- a/submit_app/templates/confirm.html
+++ b/submit_app/templates/confirm.html
@@ -41,7 +41,15 @@
               </tr>
               <tr>
                 <td><b>Bundle Name</b></td>
-                <td>{{ pending.fullname }}</td>
+                <td>{{ pending.fullname }}
+		  <br/>(A <b>ChimeraX_</b> prefix
+		  for the bundle is recommended to avoid
+		  name clash with Python distributions
+		  from <a href="http://pypi.python.org">pypi.python.org</a>.
+		  The prefix will not be displayed in
+		  the toolshed browsing and download pages
+		  to make the output easier to read but
+		  is required for all other purposes.)</td>
               </tr>
               <tr>
                 <td><b>Bundle Version</b></td>
