--- a/apps/templates/app_button.html
+++ b/apps/templates/app_button.html
@@ -25,7 +25,7 @@
             </div>
           </td>
           <td align="left">
-            <h5>{{ app.fullname }}</h5>
+            <h5>{{ app.display_name }}</h5>
           </td>
         </tr>
         <tr valign="top">
@@ -49,7 +49,7 @@
             </div>
           </td>
           <td align="left">
-            <h5>{{ app.fullname }}</h5>
+            <h5>{{ app.display_name }}</h5>
           </td>
         </tr>
         <tr valign="top">
