--- a/apps/templates/app_page.html
+++ b/apps/templates/app_page.html
@@ -51,7 +51,7 @@
 			</a>
 			<ul class="dropdown-menu pull-right">
 				<li><a href="{% url 'app_page_edit' app.name %}">Edit this page</a></li>
-				<li><a href="{% url 'submit-app' %}?expect_app_name={{ app.display_name }}">Submit a bundle release</a></li>
+				<li><a href="{% url 'submit-app' %}?expect_app_name={{ app.fullname }}">Submit a bundle release</a></li>
 				<li class="divider"></li>
 				<li><a data-toggle="modal" href="#delete_ratings_modal">Delete all ratings</a></li>
 			</ul>
