--- a/apps/templates/nav_panel.html
+++ b/apps/templates/nav_panel.html
@@ -25,7 +25,7 @@
                 {% ifequal navbar_selected_link "all" %} 
                   All Bundles
                 {% else %}
-                  <a href="{% url 'all_apps' %}">All Bundles</a>
+                  <a href="{% url 'all_apps' %}{{ cx_platform|safe }}">All Bundles</a>
                 {% endifequal %}
               </h4>
             </td>
