--- a/apps/templates/app_page.html
+++ b/apps/templates/app_page.html
@@ -50,7 +50,7 @@
 				<span class="caret"></span>
 			</a>
 			<ul class="dropdown-menu pull-right">
-				<li><a href="{% url 'app_page_edit' app.name %}">Edit this page</a></li>
+				<li><a href="{% url 'app_page_edit' app.name %}{{ cx_platform|safe }}">Edit this page</a></li>
 				<li><a href="{% url 'submit-app' %}?expect_app_name={{ app.fullname }}">Submit a bundle release</a></li>
 				<li class="divider"></li>
 				<li><a data-toggle="modal" href="#delete_ratings_modal">Delete all ratings</a></li>
@@ -198,7 +198,7 @@
 					<div class="span8">
 						{# Release version #}
 						<h4>
-							<a href="{% url 'release_download' app.name release.version %}">
+							<a href="{% url 'release_download' app.name release.version release.id%}">
 								{{ release.version }}
 							</a>
 							<small><abbr class="timeago" title="{{ release.created_iso }}"></abbr></small>
@@ -209,6 +209,9 @@
 						<p>
 							<strong>Works with</strong> ChimeraX
 							{{ release.works_with }}
+							{% if release.platform %}
+							on {{ release.platform }}
+							{% endif %}
 						</p>
 						{# End Works with #}
 
@@ -225,24 +228,24 @@
 						{% endwith %}
 						{% endif %}
 
-                        {# Release metadata #}
+						{# Release metadata #}
 						{% if release.metadata_count %}
 						<p>
 							<strong>Details</strong>
 							<ul>
 								{% for type, values in release.get_metadata %}
 								<li>{{ type }}: {{ values|join:", " }}
-                                    <!--
-                                    {% for v in values %}
-                                    {{ v }}
-                                    {% endfor %}
-                                    -->
-                                </li>
+									<!--
+									{% for v in values %}
+									{{ v }}
+									{% endfor %}
+									-->
+								</li>
 								{% endfor %}
 							</ul>
 						</p>
 						{% endif %}
-                        {# End Release metadata #}
+						{# End Release metadata #}
 
 						{# Release dependencies #}
 						{% if release.dependents.count %}
@@ -250,7 +253,7 @@
 							<strong>Bundles that depend on this release</strong>
 							<ul>
 								{% for dependent in release.dependents.all %}
-								<li><a href="{% url 'app_page' dependent.app.name %}" target="_blank">{{ dependent.app.display_name }}</a> {{ dependent.version }}</li>
+								<li><a href="{% url 'app_page' dependent.app.name %}{{ cx_platform|safe }}" target="_blank">{{ dependent.app.display_name }}</a> {{ dependent.version }}</li>
 								{% endfor %}
 							</ul>
 						</p>
@@ -278,46 +281,32 @@
 
 		{# 3.0 download panel #}
 		{% if app.has_releases %}
+		{% for cx_release in cx_latest_releases %}
 		<div class="well">
-			<h6 class="panel-title muted">CHIMERAX</h6>
-			<button class="btn btn-large btn-block" id="cy-app-install-btn">
+			<!-- <h6 class="panel-title muted">CHIMERAX</h6> -->
+			<button class="btn btn-large btn-block cy-app-install-btn" platform="{{ cx_release.platform }}" id="{{ cx_release.id }}">
 				<i></i> {# <-- download button icon will go here #}
 				<h4></h4> {# <-- download button text will go here #}
 			</button>
-			<p><strong>Version</strong> {{ cy3_latest_release.version }}</p>
-			{% if app.license_text %}<p><strong>License</strong> <a href="{{ app.license_text }}" target="_blank">Click here</a></p>{% endif %}
-			<p><strong>Released</strong> {{ cy3_latest_release.created|date:'j M Y' }}</p>
-			<p><strong>Works with</strong> <a href="http://www.rbvi.ucsf.edu/chimerax" target="_blank">ChimeraX {{ cy3_latest_release.works_with }}</a></p>
-			<p><strong>Download Stats</strong> <a href="{% url 'app_stats' app.name %}" target="_blank">Click here</a>
+			<p>
+			<strong>Version</strong> {{ cx_release.version }}<br/>
+			{% if app.license_text %}<p><strong>License</strong> <a href="{{ app.license_text }}" target="_blank">Click here</a><br/>{% endif %}
+			<strong>Released</strong> {{ cx_release.created|date:'j M Y' }}<br/>
+			<strong>Works with</strong> <a href="http://www.rbvi.ucsf.edu/chimerax" target="_blank">ChimeraX {{ cx_release.works_with }}</a>
+			</p>
 		</div>
+		{% endfor %}
+		{% if not cx_latest_releases %}
+		{# in case there are no downloads for this platform... #}
+		<div class="alert alert-error">
+			No download available for this platform.
+		</div>
+		{% endif %}
 		{% endif %}
 		{# end 3.0 download panel #}
-			
-		<!--
-		{# 2.x download panel #}
-		{% if app.cy_2x_plugin_download %}
-		<div class="well">
-			<h6 class="panel-title muted">CHIMERAX</h6>
-			{% if app.has_releases %}
-			<p><strong>Version</strong> <a class="cy-app-2x-download-popover" href="{{ app.cy_2x_plugin_download }}">{{ app.cy_2x_plugin_version }}</a></p>
-			{% else %}
-			<button class="btn btn-large btn-primary btn-block cy-app-2x-download-popover" id="cy-app-install-btn" onClick="window.location.href='{{ app.cy_2x_plugin_download|escapejs }}'" >
-				<i class="icon-cy-install-download"></i>
-				<h4>Download</h4>
-			</button>
-			<p><strong>Version</strong> {{ app.cy_2x_plugin_version }}</p>
-			{% if app.license_text %}<p><strong>License</strong> <a href="{{ app.license_text }}" target="_blank">Click here</a></p>{% endif %}
-			{% endif %}
-			{% if app.cy_2x_plugin_release_date %}<p><strong>Released</strong> {{ app.cy_2x_plugin_release_date|date:'j M Y' }}</p>{% endif %}
-			{% if app.cy_2x_versions %}<p><strong>Works with</strong> <a href="http://www.rbvi.ucsf.edu/chimerax" target="_blank">ChimeraX {{ app.cy_2x_versions }}</a></p>{% endif %}
-			<p><strong>Download Stats</strong> <a href="http://chianti.ucsd.edu/cyto_web/plugins/plugindownloadstatistics.php">Click here</a></p>
-		</div>
-		{% endif %}
-		{# end 2.x download panel #}
-		-->
-				
-		{# in case there are no downloads... #}
-		{% if not app.has_releases and not app.cy_2x_plugin_download %}
+
+		{# in case there are no downloads at all... #}
+		{% if not app.has_releases %}
 		<div class="alert alert-error">
 			No download available.
 		</div>
@@ -347,6 +336,7 @@
 
 				<li class="divider"></li>
 
+				<li><a href="{% url 'app_stats' app.name %}" target="_blank">Download Stats</a></li>
 				{% if app.website %}
 				<li><a href="{{ app.website }}" target="_blank">
 					<i class="icon-home"></i> Website
@@ -434,15 +424,18 @@
 {# End vote popover content #}
 
 <script type="text/javascript" src="{% get_static_prefix %}apps/js/app_page.js"></script>
-	
+
 <script type="text/javascript">
 $('.has-tooltip').tooltip();
 {% if app.has_releases %}
-AppPage.setup_install("{{ app.name|escapejs }}",
+{% for cx_release in cx_latest_releases %}
+AppPage.setup_install("{{ cx_release.id }}",
+	"{{ app.name|escapejs }}",
 	"{{ app.display_name|escapejs }}",
-	"{% url 'release_download' app.name cy3_latest_release.version %}", 
-	"{{ cy3_latest_release.version }}",
+	"{% url 'release_download' app.name cx_release.version cx_release.id %}", 
+	"{{ cx_release.version }}",
 	"{% url 'getstarted_app_install' %}");
+{% endfor %}
 {% endif %}
 AppPage.setup_cy_2x_download_popover('{% get_static_prefix %}apps/img/plugins_dir.png');
 
