--- a/apps/templates/apps_default.html
+++ b/apps/templates/apps_default.html
@@ -10,18 +10,18 @@
   <div class="row">
     <div class="span4"><h2>Newest Releases</h2></div>
   </div>
-  <div class="row">{% app_buttons latest_apps %}</div>
+  <div class="row">{% app_buttons latest_apps cx_platform %}</div>
   <div class="row">
     <div class="span4" style="text-align: right;">
-      <a href="{% url 'all_apps'%}#newest release">more newest releases &raquo;</a>
+      <a href="{% url 'all_apps'%}{{ cx_platform|safe }}#newest release">more newest releases &raquo;</a>
     </div>
   </div>
 
   <div class="row"><div class="span4"><h2>Top Downloaded Bundles</h2></div></div>
-  <div class="row">{% app_buttons downloaded_apps %}</div>
+  <div class="row">{% app_buttons downloaded_apps cx_platform %}</div>
   <div class="row">
     <div class="span4" style="text-align: right;">
-      <a href="{% url 'all_apps'%}#downloads">more top downloads &raquo;</a>
+      <a href="{% url 'all_apps'%}{{ cx_platform|safe }}#downloads">more top downloads &raquo;</a>
     </div>
   </div>
 {% endblock %}
