--- a/apps/templates/apps_with_author.html
+++ b/apps/templates/apps_with_author.html
@@ -34,7 +34,7 @@
     </div>
     <div class="row">
         <div class="span12">
-            {% app_buttons apps %}
+            {% app_buttons apps cx_platform %}
         </div>
     </div>
 {% endblock %}
