Change "an bundle" to "a bundle" (original "an app")

--- a/help/templates/contact.html
+++ b/help/templates/contact.html
@@ -15,7 +15,7 @@
 <div class="row" style="margin-bottom: 3em;">
 	<div class="span6 offset1">
     <p>
-    <strong>Do you have a question about an bundle or ChimeraX?
+    <strong>Do you have a question about a bundle or ChimeraX?
     <br>
     You can send your question to the
     <a href="mailto:chimerax-users@cgl.ucsf.edu">ChimeraX Help Desk</a>.
