--- a/submit_app/templates/upload_form.html
+++ b/submit_app/templates/upload_form.html
@@ -84,7 +84,7 @@
     <div class="row">
         <div class="span8">
             <span class="label label-warning"><i class="icon-info-sign icon-white"></i> Notice</span>
-            Uploading an bundle using certain browsers/OS combinations may cause a hang or timeout. 
+            Uploading a bundle using certain browsers/OS combinations may cause a hang or timeout. 
             We have only seen this with linux distros so far. So, if your upload hangs, please 
             consider trying the upload from a different system.
         </div>
