--- a/help/templates/getstarted.html
+++ b/help/templates/getstarted.html
@@ -11,7 +11,7 @@
   <div class="row"><div class="span12"><div class="page-header"><h1>Get Started</h1></div></div></div>
 
   <div class="row"><div class="span12">
-	  <h4>Don't know what you're looking for but just want to try out an bundle? Check out our Top Downloaded Bundles.</h4>
+	  <h4>Don't know what you're looking for but just want to try out a bundle? Check out our Top Downloaded Bundles.</h4>
 	  <img src="{% get_static_prefix %}help/img/getstarted_top_downloaded_apps.png">
   </div></div>
 
@@ -21,7 +21,7 @@
   </div></div>
 
   <div class="row"><div class="span12">
-	  <h4>Do you know the name of an bundle or someone who wrote one? Use the Search field to find apps, categories, and authors.</h4>
+	  <h4>Do you know the name of a bundle or someone who wrote one? Use the Search field to find apps, categories, and authors.</h4>
 	  <img src="{% get_static_prefix %}help/img/getstarted_search.png">
   </div></div>
 {% endblock %}
