--- a/apps/templates/devel_release.html
+++ b/apps/templates/devel_release.html
@@ -12,27 +12,20 @@
     h3 { margin-bottom: 0.5em; }
     form { margin-bottom: 1em; }
   </style>
-  <script type="text/javascript">
-    function set_all(tag, value) {
-      var buttons = document.getElementsByClassName(tag);
-      for (var i = 0; i < buttons.length; i++)
-        buttons[i].checked = value;
-    }
-  </script>
   {% if new_bundles %}
     <h3>Unreleased Bundles</h3>
     <div class="span8" id="new_bundle_div">
     <form method="POST" action="new_bundle">
       {% csrf_token %}
-      <button onclick="set_all('new_bundle', true);">Check All</button>
-      <button onclick="set_all('new_bundle', false);">Uncheck All</button>
-      <button type="submit">Release Bundles</button>
+      <button class="b_check_all">Check All</button>
+      <button class="b_clear_all">Uncheck All</button>
+      <button class="b_submit" type="submit">Release Bundles</button>
       <div>
         {% devel_entries new_bundles cx_platform %}
       </div>
-      <button onclick="set_all('new_bundle', true);">Check All</button>
-      <button onclick="set_all('new_bundle', false);">Uncheck All</button>
-      <button type="submit">Release Bundles</button>
+      <button class="b_check_all">Check All</button>
+      <button class="b_clear_all">Uncheck All</button>
+      <button class="b_submit" type="submit">Release Bundles</button>
     </form>
     </div>
   {% endif %}
@@ -41,15 +34,15 @@
     <div class="span8" id="new_version_div">
     <form method="POST" action="new_version">
       {% csrf_token %}
-      <button onclick="set_all('new_version', true);">Check All</button>
-      <button onclick="set_all('new_version', false);">Uncheck All</button>
-      <button type="submit">Release Versions</button>
+      <button class="v_check_all">Check All</button>
+      <button class="v_clear_all">Uncheck All</button>
+      <button class="v_submit" type="submit">Release Versions</button>
       <div>
         {% devel_entries new_versions cx_platform %}
       </div>
-      <button onclick="set_all('new_version', true);">Check All</button>
-      <button onclick="set_all('new_version', false);">Uncheck All</button>
-      <button type="submit">Release Versions</button>
+      <button class="v_check_all">Check All</button>
+      <button class="v_clear_all">Uncheck All</button>
+      <button class="v_submit" type="submit">Release Versions</button>
     </form>
     </div>
   {% endif %}
@@ -60,4 +53,39 @@
     </div>
     <br/>
   {% endif %}
+  <script type="text/javascript">
+    function set_all(tag, value) {
+      var buttons = document.getElementsByClassName(tag);
+      for (var i = 0; i < buttons.length; i++)
+        buttons[i].checked = value;
+    }
+    function update_submit(checkboxes, submit_button) {
+      $(submit_button).prop("disabled", !$(checkboxes).is(":checked"));
+      return false;
+    }
+    $(".b_check_all").click(function(e) {
+        set_all("new_bundle", true);
+        return update_submit(".new_bundle", ".b_submit");
+    });
+    $(".b_clear_all").click(function(e) {
+        set_all("new_bundle", false);
+        return update_submit(".new_bundle", ".b_submit");
+    });
+    $(".v_check_all").click(function(e) {
+        set_all("new_version", true);
+        return update_submit(".new_bundle", ".b_submit");
+    });
+    $(".v_clear_all").click(function(e) {
+        set_all("new_version", false);
+        return update_submit(".new_bundle", ".b_submit");
+    });
+    $(".new_bundle").change(function(e) {
+        return update_submit(".new_bundle", ".b_submit");
+    });
+    $(".new_version").change(function(e) {
+        return update_submit(".new_version", ".v_submit");
+    });
+    update_submit(".new_bundle", ".b_submit");
+    update_submit(".new_version", ".v_submit");
+  </script>
 {% endblock %}
