--- a/download/templates/app_stats.html
+++ b/download/templates/app_stats.html
@@ -52,6 +52,14 @@
 
 <div class="row">
   <div class="span12">
+    Map functionality disabled because Google requires enabling
+    billing, even for "free" maps/charts service.
+  </div>
+</div>
+
+<!--
+<div class="row">
+  <div class="span12">
     <div id="geography-world-chart" style="width: 100%; height: 540px; cursor: pointer;"></div>
   </div>
 </div>
@@ -70,13 +78,16 @@
     <div id="geography-country-chart" style="width: 100%; height: 540px;"></div>
   </div>
 </div>
+-->
 
 
 <script type="text/javascript">
-  google.load('visualization', '1', {'packages': ['corechart', 'geochart', 'annotatedtimeline']});
+  google.load('visualization', '1', {'packages': ['corechart', 'annotatedtimeline']});
   google.setOnLoadCallback(function() {
     AppStats.setupTimeline();
+    /* Disabled since Google requires enabling billing even for free service
     AppStats.setupGeography();
+    */
   });
 </script>
 
