--- a/download/templates/app_stats.html
+++ b/download/templates/app_stats.html
@@ -45,19 +45,22 @@
   <div class="span6">
     <h3>Geography</h3>
   </div>
-  <div class="span6">
-    <button class="btn btn-small pull-right" id="geography-csv"><i class="icon-download-alt"></i> Save as CSV</button>
-  </div>
-</div>
-
-<div class="row">
   <div class="span12">
-    Map functionality disabled because Google requires enabling
+    Map functionality is disabled because Google requires enabling
     billing, even for "free" maps/charts service.
   </div>
 </div>
 
 <!--
+<div class="row">
+  <div class="span6">
+    <h3>Geography</h3>
+  </div>
+  <div class="span6">
+    <button class="btn btn-small pull-right" id="geography-csv"><i class="icon-download-alt"></i> Save as CSV</button>
+  </div>
+</div>
+
 <div class="row">
   <div class="span12">
     <div id="geography-world-chart" style="width: 100%; height: 540px; cursor: pointer;"></div>
