--- a/templates/base.html
+++ b/templates/base.html
@@ -96,6 +96,8 @@
 
       <a href="{% url 'wall_of_apps' %}">Wall of Bundles</a>
       &bull;
+      <a href="{% url 'bundle_developers' %}">Bundles Developers</a>
+      &bull;
       <a href="{% url 'all_stats' %}">All Stats</a>
     </footer>
   </div>
