Add meta tags for Google

--- a/templates/base.html
+++ b/templates/base.html
@@ -18,6 +18,9 @@
   {% block more_head %}{% endblock %}
 
   <title>ChimeraX Toolshed {% block title %}{% endblock %}</title>
+  <meta name="keywords" content="UCSF ChimeraX, molecular visualization, structural biology, molecular assemblies, medical imaging, cryoem, optical microscopy, 3D density maps, sequence-structure analysis, cytoscape, clustermaker, biological pathways, Computer Graphics Laboratory" />
+  <meta name="description" content="Resource for Biocomputing, Visualization amd Informatics (RBVI), and its precursor, the Computer Graphics Laboratory (CGL), develops cutting-edge interactive software tools and advanced web-based computational resources that provide integrated visualizations and analyses of molecular structures and related non-structural biological information." />
+  <meta name="google-site-verification" content="fGZXiPqcWjLawoljDoIhoBdKNc6YiSheZ6p4D3M26wQ" />
 
   {# Google Analytics Snippet #}
   <script type="text/javascript">
